--- a/view/index.html
+++ b/view/index.html
@@ -5,6 +5,7 @@
     <title>hello</title>
 </head>
 <body>
+<link rel="stylesheet" href="https://unpkg.com/antd@3.6.1/dist/antd.min.css">
 <div id="app">
     <%- content %>
 </div>
